# RAG_Search_KG

./: .gitignore  1_load_ocr_and_qas.py  2_prepare_vector_chunks.py  3_ingest_Qdrant.py  4_ingest_neo4j.py  CLEANUP_SCRIPT.sh  CLEAN_STARTUP.md  Dockerfile  FRONTEND_FEATURES.md  LICENSE  MONITORING_GUIDE.md  README.md  app.py  app_rag.py  cleanup_data.sh  docker-compose.yaml  docker-compose.yml  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  init_neo4j.py  init_qdrant.py  monitoring_demo.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  start_clean.py  test_system.py
client/: package-lock.json  package.json
client/public/: manifest.json
evaluation/: metrics.py
frontend/: Dockerfile  nginx.conf  package.json
ingestion/: __init__.py  multimodal_processor.py  pipeline.py
monitoring/: __init__.py  error_handler.py  health_check.py  input_validation.py  logger.py  metrics_collector.py  state_recovery.py
project/: __init__.py
search/: __init__.py
src/: config.env  config.py  test_neo4j.py
system_state/: system_state_1749550644.json  system_state_1749550650.json  system_state_1749551240.json  system_state_1749551247.json  system_state_1749551800.json  system_state_1749552267.json  system_state_1749552567.json  system_state_1749552640.json  system_state_1749552681.json  system_state_1749552765.json  system_state_1749553227.json
templates/: enhanced_ui.html  index.html
tests/: __init__.py  test_advanced_search.py  test_api.py  test_ingestion.py  test_monitoring.py  test_text_ingestion.py
ui/: package-lock.json  package.json
(+81 files in other folders)
