[project]
name = "aparavi"
version = "0.1.0"
description = "APARAVI project"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "weaviate-client (>=4.15.0,<5.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "openai (>=1.84.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "faster-whisper (>=1.1.1,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
